<resources>
    <string name="app_name">code</string>
    <string name="email_website_for_details">Email, Website for details</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="job_title">Job Title</string>
    <string name="name">Name</string>
    <string name="company_name">COMPANY NAME</string>
    <string name="user_image">User Image</string>
</resources>