<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainerId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/companyNameId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:text="@string/company_name" />

        <ImageView
            android:id="@+id/userImageId"
            android:contentDescription="@string/user_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_user_icon" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="2dp" />

    <TextView
        android:id="@+id/nameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/jobId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:text="@string/job_title" />

    <TextView
        android:id="@+id/phoneNumberId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:text="@string/phone_number" />

    <TextView
        android:id="@+id/addressId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:text="@string/address" />

    <TextView
        android:id="@+id/detailsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:text="@string/email_website_for_details" />

</LinearLayout>